fix bug with chat top padding shifting when changing window size

--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -8,7 +8,7 @@
     padding: 12px;
     overflow-y: scroll;
     /* enough height for even little text to stick to the bottom */
-    padding-top: 100%;
+    padding-top: 100vh;
     /* hide scrollbar */
     margin-right: -25px;
     overflow-x: hidden;
